04-opa-gatekeeper/csr-deny/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCSRDeny
metadata:
  name: csr-deny
spec:
  match:
    kinds:
      - apiGroups: ["certificates.k8s.io"]
        kinds: [""]
  parameters: 
    signerName: ""
